--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "stopwatch",
   "version": "0.1.0",
+  "homepage": "https://sguschenka-kate.github.io/stopwatch",
   "private": true,
   "dependencies": {
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -11,6 +13,8 @@
     "use-double-click": "^1.0.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
